# IDS-721_rg361_week-05

./: .gitignore  README.md
.github/workflows/: cicd.yml
rust_micro/: Cargo.toml
rust_micro/src/: main.rs
serverless_rust/: README.md  samconfig.toml  template.yaml
serverless_rust/rust_app/: Cargo.toml
