[package]
name = "rust_micro"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.1.8"
lambda_http = "0.10.0"
lambda_runtime = "0.10.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
aws-sdk-dynamodb = "0.21.0"

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"

